# saral

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/saral/: __init__.py  cli.py  models.py  report.py
src/saral/domains/: __init__.py  finance.py  legal.py  medical.py  tech.py
src/saral/simplifier/: __init__.py  detector.py  leveler.py  translator.py
tests/: test_benchmark.py  test_core.py  test_detector.py  test_integration.py  test_leveler.py  test_translator.py
